<resources>
    <string name="app_name">Hey Friend!</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="have_not_events">События отсутствуют.</string>
    <string name="have_not_events_history">Вы совсем забыли друга :(</string>
    <string name="title_activity_friend_edit">Изменить</string>
    <string name="action_friend_list">Contacts</string>
    <string name="action_event_list">Events</string>
    <string name="events_activity_title">События</string>
    <string name="persons_activity_title">Друзья</string>
    <string name="events_days_left_suffix">дн.</string>
    <string name="event_list_title_urgently">Срочные</string>
    <string name="event_list_title_soon">Ближайшие</string>
    <string name="event_action_accept">Принять</string>
    <string name="event_action_put_off">Отложить</string>
    <string name="event_action_dismiss">Отклонить</string>
    <string name="events_not_existing_notify">У вас нет новых событий.</string>
    <string name="friends_not_existing_notify">Список друзей пуст.</string>
    <string name="friends_add_button_text">ДОБАВИТЬ</string>
    <string name="save_button_title">Сохранить</string>
    <string name="cancel_button_title">Отменить</string>
    <string name="add_contact_layout_title">Добавить друга</string>
    <string name="friend_name_hint">Имя друга</string>
    <string name="friend_description_hint">Описание друга</string>
    <string name="significant_events_title">Значимые события</string>
    <string name="add_significant_event_button_text">Добавить новое событие</string>
    <string name="startEventService">Start Event Service</string>
    <string name="stopEventService">Stop Event Service</string>
    <string name="title_activity_vkontakte">Импорт друзей</string>
    <string name="import_from_vk">Импортировать друзей из ВКонтакте</string>
    <string name="import_category">Импорт</string>
    <string name="enable_push">Включить уведомления</string>
    <string name="notifications_category">Уведомления</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="significant_event_name_hint">Название замечания</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">ОТМЕНА</string>
    <string name="significant_event_date_hint">Дата</string>
    <string name="empty_event_name_hint">Название события не может быть пустым</string>
    <string name="settings_switch_push">Уведомления</string>
    <string name="settings_get_friends_from_vk">Добавить друзей из Вконтакте</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="empty_event_date_hint">Дата события не задана</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="status_green_txt">Близкий</string>
    <string name="status_yellow_txt">Давно не общались</string>
    <string name="status_red_txt">Забытый друг</string>
    <string name="action_search">Поиск</string>
    <string name="change_contact_layout_title">Изменить</string>
    <string name="empty_person_name_hint">Имя друга не может быть пустым</string>
    <string name="import_compete">Друзья успешно импортированы</string>
    <string name="title_activity_main">Welcome to Hey Friend!</string>
    <string name="welcome_title">Приветственный экран</string>
    <string name="skip">Пропустить</string>
    <string name="notification_suffix">" отмечает "</string>
    <string name="notify_text_title">Hey Friend!</string>
</resources>
