<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageButton
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="4dp"
        android:id="@+id/save_button"
        android:src="@drawable/ic_done_white_24dp"
        android:background="@drawable/action_bar_button_click"
        android:layout_weight="0"
        android:contentDescription="@string/save_button_title" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textSize="@dimen/standard_text_size"
        android:textStyle="bold"
        android:text="@string/add_contact_layout_title"
        android:textAlignment="center"
        android:id="@+id/friend_action_bar_title"
        android:textColor="@color/text_color_primary"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <ImageButton
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_marginRight="4dp"
        android:background="@drawable/action_bar_button_click"
        android:id="@+id/cancel_button"
        android:src="@drawable/ic_clear_white_24dp"
        android:layout_weight="0"
        android:contentDescription="@string/cancel_button_title" />

</LinearLayout>