<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/significant_event_icon"
            android:src="@color/circle_button_color"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/significant_event_name"
            android:singleLine="true"
            android:textColor="@color/text_color_secondary"
            android:textSize="@dimen/standard_text_size"
            android:hint="@string/significant_event_name_hint"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:background="@color/circle_button_color"
            android:layout_width="72dp"
            android:layout_height="50dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/significant_event_date"
            android:singleLine="true"
            android:textColor="@color/text_color_secondary"
            android:textSize="@dimen/standard_text_size"
            android:hint="@string/significant_event_date_hint"
            android:inputType="date"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:background="@color/circle_button_color"
            android:layout_width="72dp"
            android:layout_height="50dp" />
        <Spinner
            android:id="@+id/reminder_time_spinner"
            android:entries="@array/reminder_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:background="@color/transparent"
            android:textColor="@color/blue_button_text"
            android:textSize="@dimen/standard_text_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <Button
            android:id="@+id/ok_button"
            android:text="@string/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textColor="@color/blue_button_text"
            android:textSize="@dimen/standard_text_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

    </LinearLayout>

</LinearLayout>